// Vitest Snapshot v1

exports[`calculate assimilé salarié > ACRE 1`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: 5298
entreprise . charges: 0
protection sociale . maladie . arrêt maladie: undefined
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate assimilé salarié > ACRE 2`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: 10996
entreprise . charges: 0
protection sociale . maladie . arrêt maladie: undefined
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate assimilé salarié > ACRE 3`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: 16694
entreprise . charges: 0
protection sociale . maladie . arrêt maladie: undefined
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate assimilé salarié > JEI 1`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: 33911
entreprise . charges: 0
protection sociale . maladie . arrêt maladie: undefined"
`;

exports[`calculate assimilé salarié > avec charges 1`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: 5298
entreprise . charges: 2000
protection sociale . maladie . arrêt maladie: undefined"
`;

exports[`calculate assimilé salarié > avec charges 2`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: 10996
entreprise . charges: 15000
protection sociale . maladie . arrêt maladie: undefined"
`;

exports[`calculate assimilé salarié > échelle de rémunération 1`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: undefined
entreprise . charges: 0
protection sociale . maladie . arrêt maladie: undefined"
`;

exports[`calculate assimilé salarié > échelle de rémunération 2`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: 170
entreprise . charges: 0
protection sociale . maladie . arrêt maladie: undefined"
`;

exports[`calculate assimilé salarié > échelle de rémunération 3`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: 740
entreprise . charges: 0
protection sociale . maladie . arrêt maladie: undefined"
`;

exports[`calculate assimilé salarié > échelle de rémunération 4`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: 2449
entreprise . charges: 0
protection sociale . maladie . arrêt maladie: undefined"
`;

exports[`calculate assimilé salarié > échelle de rémunération 5`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: 5298
entreprise . charges: 0
protection sociale . maladie . arrêt maladie: undefined"
`;

exports[`calculate assimilé salarié > échelle de rémunération 6`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: 10996
entreprise . charges: 0
protection sociale . maladie . arrêt maladie: undefined"
`;

exports[`calculate assimilé salarié > échelle de rémunération 7`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: 28090
entreprise . charges: 0
protection sociale . maladie . arrêt maladie: undefined"
`;

exports[`calculate assimilé salarié > échelle de rémunération 8`] = `
"dirigeant . auto-entrepreneur . revenu net: null
dirigeant . rémunération . net: 57190
entreprise . charges: 0
protection sociale . maladie . arrêt maladie: undefined
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;
